infra/auth-service.yaml
# auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: meta-auth-service
          image: metamedia/meta-auth-service:latest
          ports:
            - containerPort: 3001
          volumeMounts:           
            - name: public-volume  
              mountPath: /app/public  
      volumes:                   
        - name: public-volume   
          emptyDir: {}           

---
# auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meta-auth-service
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3001
      targetPort: 3001
