infra/user-service.yaml
# user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
  labels:
    app: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: meta-user-service
          image: metamedia/meta-user-service:latest
          ports:
            - containerPort: 3000
          volumeMounts:           
            - name: user-public-volume  
              mountPath: /app/public  
      volumes:                   
        - name: user-public-volume   
          emptyDir: {}           

---
# user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meta-user-service
spec:
  selector:
    app: user
  ports:
    - name: user
      protocol: TCP
      port: 3000
      targetPort: 3000
